[package]
name = "kexplain"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ashkan Kiani"]
description = "Derive explanations for functions by 'showing the work' for things like math"
readme = "README.md"
homepage = "https://github.com/norcalli/kexplain/"
repository = "https://github.com/norcalli/kexplain/"
keywords = ["explain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
